--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body {
   flex-direction: column;
 }
 .container{
-    margin: 60px 100px;
+    margin: 0
     height: 100vh;
     
 }
@@ -29,7 +29,7 @@ html, body {
     font-size: 18px;
     text-align: center;
     display: flex;
-    margin-top: 400px;
+    margin-top: 0px;
     width:100%;
     height: 100%;
     justify-content:space-around;
@@ -39,13 +39,15 @@ html, body {
     color: black;
   }
   .nadpis_odkaz{
-    color: #F47B50;
+    color:#F47B50;
   }
   .nadpis {
     font-size: 50px;
     font-weight: normal;
     order: 1;
-    margin: 0;
+    margin-left: 100px;
+    
+    margin-bottom: 0;
   }
   .toggler, .toggler3, .menu__checkbox{
     display: none;
@@ -54,7 +56,8 @@ html, body {
     list-style: none;
     display: flex;
     gap: 30px;
-    
+    margin-right: 100px;
+    margin-top: 50px;
   }
   .menu__item{
     font-size: 25px;
@@ -65,11 +68,11 @@ html, body {
   .hlavicka {
    top: 0;
     display: flex;
-  /*  position: sticky;*/
+  position: sticky;
    justify-content: space-between;
-   
+   background-color:#FFE5BC;
    width: 100%;
-   
+  
    margin: 0;
    padding: 0;
   }
@@ -81,7 +84,7 @@ html, body {
   .rectangle{
     width: 2px;
     height: 30px;
-    background-color: #F47B50;
+    background-color:#F47B50;
     transform: skewX(-10deg);
     
   }
@@ -89,11 +92,14 @@ html, body {
     width: 300px;
     height: 3px;
     background-color: #618DF1;
-    display: inline-block;
+    display: block;
+    margin-top: 0;
     
-    /*position: sticky;*/
-    top: 80px;
+    top: 120px;
+    margin-left: 100px;
+    float:left;
   }
+
   .first_image{
     width: 400px;
     height: 420px;
@@ -121,7 +127,9 @@ html, body {
     position: sticky;
     bottom: 0;
     margin-bottom: 20px;
-    width: 25%;
+    width: 20%;
+    margin-right: 20px;
+    
   }
   .kontakt_hl{
     width: 250px;
