--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html, body {
     display: flex;
     padding-right: 50px;
     gap: 15px;
-    font-size: 16px;
+    font-size: 20px;
   }
   a{
     color: #F47B50;
@@ -375,7 +375,9 @@ input:focus {
   overflow: hidden;
 }
 @media (max-width: 768px) {
-
+.language{
+  font-size: 16px;
+}
 
   .menu__list {
     flex-direction: column;
